--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,13 @@
   margin: 50px 0px;
 }
 
+.tableskill {
+  display: table-cell;
+  flex-wrap: wrap;
+  margin-right: -15px;
+  margin-left: -15px;
+}
+
 .bg-rlight {
   background-color: #f8f9fa00!important;
   min-height: 100vh!important;
